freest/test/prog/Invalid/SessionPatterns/AtChoiceAndVar/AtChoiceAndVar.fst
module AtChoiceAndVar where

f : *&{L} -> *&{L}
f c@(&L _) = c
f c = c
